# app/app/api/app_http.pb.go
@@ -24,6 +24,8 @@ const OperationAppAdminWithdraw = "/api.App/AdminWithdraw"
 const OperationAppAdminWithdrawEth = "/api.App/AdminWithdrawEth"
 const OperationAppAmountTo = "/api.App/AmountTo"
 const OperationAppBuy = "/api.App/Buy"
+const OperationAppBuyThree = "/api.App/BuyThree"
+const OperationAppBuyTwo = "/api.App/BuyTwo"
 const OperationAppDeleteBalanceReward = "/api.App/DeleteBalanceReward"
 const OperationAppDeposit = "/api.App/Deposit"
 const OperationAppEthAuthorize = "/api.App/EthAuthorize"
@@ -83,6 +85,8 @@ type AppHTTPServer interface {
 	AdminWithdrawEth(context.Context, *AdminWithdrawEthRequest) (*AdminWithdrawEthReply, error)
 	AmountTo(context.Context, *AmountToRequest) (*AmountToReply, error)
 	Buy(context.Context, *BuyRequest) (*BuyReply, error)
+	BuyThree(context.Context, *BuyRequest) (*BuyReply, error)
+	BuyTwo(context.Context, *BuyRequest) (*BuyReply, error)
 	DeleteBalanceReward(context.Context, *DeleteBalanceRewardRequest) (*DeleteBalanceRewardReply, error)
 	Deposit(context.Context, *DepositRequest) (*DepositReply, error)
 	EthAuthorize(context.Context, *EthAuthorizeRequest) (*EthAuthorizeReply, error)
@@ -120,6 +124,8 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.GET("/api/app_server/recommend_list", _App_UserRecommend0_HTTP_Handler(srv))
 	r.GET("/api/app_server/user_info", _App_UserInfo0_HTTP_Handler(srv))
 	r.POST("/api/app_server/buy", _App_Buy0_HTTP_Handler(srv))
+	r.POST("/api/app_server/buy_two", _App_BuyTwo0_HTTP_Handler(srv))
+	r.POST("/api/app_server/buy_three", _App_BuyThree0_HTTP_Handler(srv))
 	r.POST("/api/app_server/set_today", _App_SetToday0_HTTP_Handler(srv))
 	r.GET("/api/app_server/set_today_list", _App_SetTodayList0_HTTP_Handler(srv))
 	r.POST("/api/app_server/withdraw", _App_Withdraw0_HTTP_Handler(srv))
@@ -222,6 +228,50 @@ func _App_Buy0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
 		http.SetOperation(ctx, OperationAppBuy)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.Buy(ctx, req.(*BuyRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*BuyReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _App_BuyTwo0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in BuyRequest
+		if err := ctx.Bind(&in.SendBody); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppBuyTwo)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.BuyTwo(ctx, req.(*BuyRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*BuyReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _App_BuyThree0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in BuyRequest
+		if err := ctx.Bind(&in.SendBody); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppBuyThree)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.BuyThree(ctx, req.(*BuyRequest))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
@@ -812,6 +862,8 @@ type AppHTTPClient interface {
 	AdminWithdrawEth(ctx context.Context, req *AdminWithdrawEthRequest, opts ...http.CallOption) (rsp *AdminWithdrawEthReply, err error)
 	AmountTo(ctx context.Context, req *AmountToRequest, opts ...http.CallOption) (rsp *AmountToReply, err error)
 	Buy(ctx context.Context, req *BuyRequest, opts ...http.CallOption) (rsp *BuyReply, err error)
+	BuyThree(ctx context.Context, req *BuyRequest, opts ...http.CallOption) (rsp *BuyReply, err error)
+	BuyTwo(ctx context.Context, req *BuyRequest, opts ...http.CallOption) (rsp *BuyReply, err error)
 	DeleteBalanceReward(ctx context.Context, req *DeleteBalanceRewardRequest, opts ...http.CallOption) (rsp *DeleteBalanceRewardReply, err error)
 	Deposit(ctx context.Context, req *DepositRequest, opts ...http.CallOption) (rsp *DepositReply, err error)
 	EthAuthorize(ctx context.Context, req *EthAuthorizeRequest, opts ...http.CallOption) (rsp *EthAuthorizeReply, err error)
@@ -906,6 +958,32 @@ func (c *AppHTTPClientImpl) Buy(ctx context.Context, in *BuyRequest, opts ...htt
 	pattern := "/api/app_server/buy"
 	path := binding.EncodeURL(pattern, in, false)
 	opts = append(opts, http.Operation(OperationAppBuy))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in.SendBody, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *AppHTTPClientImpl) BuyThree(ctx context.Context, in *BuyRequest, opts ...http.CallOption) (*BuyReply, error) {
+	var out BuyReply
+	pattern := "/api/app_server/buy_three"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAppBuyThree))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in.SendBody, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *AppHTTPClientImpl) BuyTwo(ctx context.Context, in *BuyRequest, opts ...http.CallOption) (*BuyReply, error) {
+	var out BuyReply
+	pattern := "/api/app_server/buy_two"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAppBuyTwo))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in.SendBody, &out, opts...)
 	if err != nil {
